src/compiler/parser/TemplateParser.java
// Generated from src/compiler/grammar/TemplateParser.g4 by ANTLR 4.13.2
package compiler.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape" })
public class TemplateParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int JINJA_BLOCK_START = 1, JINJA_VAR_START = 2, JINJA_COMMENT_START = 3, HTML_COMMENT = 4,
			DOCTYPE = 5, VOID_OPEN = 6, HTML_OPEN = 7, HTML_CLOSE = 8, HTML_TEXT = 9, HTML_WS = 10,
			TAG_CLOSE = 11, TAG_SLASH_CLOSE = 12, TAG_EQUALS = 13, TAG_NAME = 14, TAG_VALUE_PLAIN = 15,
			TAG_ATTR_JINJA_DQ_START = 16, TAG_ATTR_JINJA_SQ_START = 17, TAG_WS = 18, TAG_ATTR_DQ_JINJA_START = 19,
			TAG_ATTR_DQ_END = 20, TAG_ATTR_DQ_TEXT = 21, TAG_ATTR_SQ_JINJA_START = 22, TAG_ATTR_SQ_END = 23,
			TAG_ATTR_SQ_TEXT = 24, JINJA_BLOCK_END = 25, JINJA_VAR_END = 26, FOR = 27, IN = 28,
			IF = 29, ELIF = 30, ELSE = 31, ENDIF = 32, ENDFOR = 33, NOT = 34, AND = 35, OR = 36, COMPARE = 37,
			DOT = 38, LPAREN = 39, RPAREN = 40, LBRACK = 41, RBRACK = 42, COMMA = 43, EQUAL = 44,
			PIPE = 45, JINJA_STRING = 46, JINJA_NUMBER = 47, JINJA_NAME = 48, JINJA_WS = 49,
			JINJA_COMMENT_END = 50, JINJA_COMMENT_TEXT = 51;
	public static final int RULE_template = 0, RULE_content = 1, RULE_html_element = 2, RULE_attribute = 3,
			RULE_attr_value = 4, RULE_attr_part_dq = 5, RULE_attr_part_sq = 6, RULE_text_content = 7,
			RULE_jinja_variable = 8, RULE_filter = 9, RULE_jinja_for = 10, RULE_jinja_if = 11,
			RULE_elif_clause = 12, RULE_else_clause = 13, RULE_content_block = 14,
			RULE_jinja_comment = 15, RULE_jinja_expr = 16, RULE_jinja_args = 17, RULE_jinja_arg = 18;

	private static String[] makeRuleNames() {
		return new String[] {
				"template", "content", "html_element", "attribute", "attr_value", "attr_part_dq",
				"attr_part_sq", "text_content", "jinja_variable", "filter", "jinja_for",
				"jinja_if", "elif_clause", "else_clause", "content_block", "jinja_comment",
				"jinja_expr", "jinja_args", "jinja_arg"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'{%'", null, "'{#'", null, null, null, null, null, null, null,
				"'>'", "'/>'", null, null, null, null, null, null, null, null, null,
				null, null, null, "'%}'", "'}}'", "'for'", "'in'", "'if'", "'elif'",
				"'else'", "'endif'", "'endfor'", "'not'", "'and'", "'or'", null, "'.'",
				"'('", "')'", "'['", "']'", "','", null, "'|'", null, null, null, null,
				"'#}'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, "JINJA_BLOCK_START", "JINJA_VAR_START", "JINJA_COMMENT_START",
				"HTML_COMMENT", "DOCTYPE", "VOID_OPEN", "HTML_OPEN", "HTML_CLOSE", "HTML_TEXT",
				"HTML_WS", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_EQUALS", "TAG_NAME",
				"TAG_VALUE_PLAIN", "TAG_ATTR_JINJA_DQ_START", "TAG_ATTR_JINJA_SQ_START",
				"TAG_WS", "TAG_ATTR_DQ_JINJA_START", "TAG_ATTR_DQ_END", "TAG_ATTR_DQ_TEXT",
				"TAG_ATTR_SQ_JINJA_START", "TAG_ATTR_SQ_END", "TAG_ATTR_SQ_TEXT", "JINJA_BLOCK_END",
				"JINJA_VAR_END", "FOR", "IN", "IF", "ELIF", "ELSE", "ENDIF", "ENDFOR",
				"NOT", "AND", "OR", "COMPARE", "DOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK",
				"COMMA", "EQUAL", "PIPE", "JINJA_STRING", "JINJA_NUMBER", "JINJA_NAME",
				"JINJA_WS", "JINJA_COMMENT_END", "JINJA_COMMENT_TEXT"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "TemplateParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public TemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(TemplateParser.EOF, 0);
		}

		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}

		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class, i);
		}

		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_template;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterTemplate(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitTemplate(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitTemplate(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 750L) != 0)) {
					{
						{
							setState(38);
							content();
						}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(44);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_content;
		}

		public ContentContext() {
		}

		public void copyFrom(ContentContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaVariableContentContext extends ContentContext {
		public Jinja_variableContext jinja_variable() {
			return getRuleContext(Jinja_variableContext.class, 0);
		}

		public JinjaVariableContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterJinjaVariableContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitJinjaVariableContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitJinjaVariableContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends ContentContext {
		public Html_elementContext html_element() {
			return getRuleContext(Html_elementContext.class, 0);
		}

		public HtmlContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterHtmlContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitHtmlContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitHtmlContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaCommentContentContext extends ContentContext {
		public Jinja_commentContext jinja_comment() {
			return getRuleContext(Jinja_commentContext.class, 0);
		}

		public JinjaCommentContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterJinjaCommentContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitJinjaCommentContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitJinjaCommentContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaIfContentContext extends ContentContext {
		public Jinja_ifContext jinja_if() {
			return getRuleContext(Jinja_ifContext.class, 0);
		}

		public JinjaIfContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterJinjaIfContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitJinjaIfContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitJinjaIfContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaForContentContext extends ContentContext {
		public Jinja_forContext jinja_for() {
			return getRuleContext(Jinja_forContext.class, 0);
		}

		public JinjaForContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterJinjaForContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitJinjaForContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitJinjaForContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextContentContext extends ContentContext {
		public Text_contentContext text_content() {
			return getRuleContext(Text_contentContext.class, 0);
		}

		public TextContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterTextContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitTextContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitTextContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContentContext extends ContentContext {
		public TerminalNode DOCTYPE() {
			return getToken(TemplateParser.DOCTYPE, 0);
		}

		public DoctypeContentContext(ContentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterDoctypeContent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitDoctypeContent(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitDoctypeContent(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
				case 1:
					_localctx = new HtmlContentContext(_localctx);
					enterOuterAlt(_localctx, 1); {
					setState(46);
					html_element();
				}
					break;
				case 2:
					_localctx = new TextContentContext(_localctx);
					enterOuterAlt(_localctx, 2); {
					setState(47);
					text_content();
				}
					break;
				case 3:
					_localctx = new JinjaVariableContentContext(_localctx);
					enterOuterAlt(_localctx, 3); {
					setState(48);
					jinja_variable();
				}
					break;
				case 4:
					_localctx = new JinjaForContentContext(_localctx);
					enterOuterAlt(_localctx, 4); {
					setState(49);
					jinja_for();
				}
					break;
				case 5:
					_localctx = new JinjaIfContentContext(_localctx);
					enterOuterAlt(_localctx, 5); {
					setState(50);
					jinja_if();
				}
					break;
				case 6:
					_localctx = new JinjaCommentContentContext(_localctx);
					enterOuterAlt(_localctx, 6); {
					setState(51);
					jinja_comment();
				}
					break;
				case 7:
					_localctx = new DoctypeContentContext(_localctx);
					enterOuterAlt(_localctx, 7); {
					setState(52);
					match(DOCTYPE);
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Html_elementContext extends ParserRuleContext {
		public Html_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_html_element;
		}

		public Html_elementContext() {
		}

		public void copyFrom(Html_elementContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementContext extends Html_elementContext {
		public TerminalNode VOID_OPEN() {
			return getToken(TemplateParser.VOID_OPEN, 0);
		}

		public TerminalNode TAG_CLOSE() {
			return getToken(TemplateParser.TAG_CLOSE, 0);
		}

		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}

		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class, i);
		}

		public VoidElementContext(Html_elementContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterVoidElement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitVoidElement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitVoidElement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingElementContext extends Html_elementContext {
		public TerminalNode HTML_OPEN() {
			return getToken(TemplateParser.HTML_OPEN, 0);
		}

		public TerminalNode TAG_SLASH_CLOSE() {
			return getToken(TemplateParser.TAG_SLASH_CLOSE, 0);
		}

		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}

		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class, i);
		}

		public SelfClosingElementContext(Html_elementContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterSelfClosingElement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitSelfClosingElement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitSelfClosingElement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementSlashContext extends Html_elementContext {
		public TerminalNode VOID_OPEN() {
			return getToken(TemplateParser.VOID_OPEN, 0);
		}

		public TerminalNode TAG_SLASH_CLOSE() {
			return getToken(TemplateParser.TAG_SLASH_CLOSE, 0);
		}

		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}

		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class, i);
		}

		public VoidElementSlashContext(Html_elementContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterVoidElementSlash(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitVoidElementSlash(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitVoidElementSlash(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalElementContext extends Html_elementContext {
		public TerminalNode HTML_OPEN() {
			return getToken(TemplateParser.HTML_OPEN, 0);
		}

		public TerminalNode TAG_CLOSE() {
			return getToken(TemplateParser.TAG_CLOSE, 0);
		}

		public TerminalNode HTML_CLOSE() {
			return getToken(TemplateParser.HTML_CLOSE, 0);
		}

		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}

		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class, i);
		}

		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}

		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class, i);
		}

		public NormalElementContext(Html_elementContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterNormalElement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitNormalElement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitNormalElement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Html_elementContext html_element() throws RecognitionException {
		Html_elementContext _localctx = new Html_elementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_html_element);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
				case 1:
					_localctx = new NormalElementContext(_localctx);
					enterOuterAlt(_localctx, 1); {
					setState(55);
					match(HTML_OPEN);
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == TAG_NAME) {
						{
							{
								setState(56);
								attribute();
							}
						}
						setState(61);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(62);
					match(TAG_CLOSE);
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 750L) != 0)) {
						{
							{
								setState(63);
								content();
							}
						}
						setState(68);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(69);
					match(HTML_CLOSE);
				}
					break;
				case 2:
					_localctx = new SelfClosingElementContext(_localctx);
					enterOuterAlt(_localctx, 2); {
					setState(70);
					match(HTML_OPEN);
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == TAG_NAME) {
						{
							{
								setState(71);
								attribute();
							}
						}
						setState(76);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(77);
					match(TAG_SLASH_CLOSE);
				}
					break;
				case 3:
					_localctx = new VoidElementContext(_localctx);
					enterOuterAlt(_localctx, 3); {
					setState(78);
					match(VOID_OPEN);
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == TAG_NAME) {
						{
							{
								setState(79);
								attribute();
							}
						}
						setState(84);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(85);
					match(TAG_CLOSE);
				}
					break;
				case 4:
					_localctx = new VoidElementSlashContext(_localctx);
					enterOuterAlt(_localctx, 4); {
					setState(86);
					match(VOID_OPEN);
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == TAG_NAME) {
						{
							{
								setState(87);
								attribute();
							}
						}
						setState(92);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(93);
					match(TAG_SLASH_CLOSE);
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_attribute;
		}

		public AttributeContext() {
		}

		public void copyFrom(AttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanAttributeContext extends AttributeContext {
		public TerminalNode TAG_NAME() {
			return getToken(TemplateParser.TAG_NAME, 0);
		}

		public BooleanAttributeContext(AttributeContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterBooleanAttribute(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitBooleanAttribute(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitBooleanAttribute(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StaticAttributeContext extends AttributeContext {
		public TerminalNode TAG_NAME() {
			return getToken(TemplateParser.TAG_NAME, 0);
		}

		public TerminalNode TAG_EQUALS() {
			return getToken(TemplateParser.TAG_EQUALS, 0);
		}

		public Attr_valueContext attr_value() {
			return getRuleContext(Attr_valueContext.class, 0);
		}

		public StaticAttributeContext(AttributeContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).enterStaticAttribute(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TemplateParserListener)
				((TemplateParserListener) listener).exitStaticAttribute(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TemplateParserVisitor)
				return ((TemplateParserVisitor<? extends T>) visitor).visitStaticAttribute(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
				case 1:
					_localctx = new StaticAttributeContext(_localctx);
					enterOuterAlt(_localctx, 1); {
					setState(96);
					match(TAG_NAME);
					setState(97);
					match(TAG_EQUALS);
					setState(98);
					attr_value();
				}
					break;
				case 2:
					_localctx = new BooleanAttributeContext(_localctx);
					enterOuterAlt(_localctx, 2); {
					setState(99);
					match(TAG_NAME);
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_valueContext extends ParserRuleContext {
		public Attr_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_attr_value;
		}

		public Attr_valueContext() {
		}

		public void copyFrom(Attr_valueContext ctx) {
			super.copyFrom(ctx);
		}
	}
